--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.0",
+    "react-toastify": "^11.0.2",
     "tostify": "^0.0.1"
   },
   "devDependencies": {
