--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,6 @@ PORT = 8080
 
 key = F2Q8GJyliHFXaP8a
 
-MONGO_CONN = mongodb+srv://ychavhan202:F2Q8GJyliHFXaP8a@cluster0.kdp3j.mongodb.net/auth?retryWrites=true&w=majority&appName=Cluster0
+MONGO_CONN ="mongodb+srv://ychavhan202:F2Q8GJyliHFXaP8a@cluster0.kdp3j.mongodb.net/auth?retryWrites=true&w=majority&appName=Cluster0"
 
 JWT_TOKEN = 'secret-2002'
